Fix: overflow bug

--- a/client/src/components/AppLayout/NavBar/styles.module.scss
+++ b/client/src/components/AppLayout/NavBar/styles.module.scss
@@ -5,6 +5,9 @@ $container-size: md;
 
 .container {
   @include flex-container($container-size, row, false, true, false);
+  position: fixed;
+  bottom: 0;
+  width: 100%;
   justify-content: space-around;
   background-color: var(--color-neutral-10);
 }
